fixed overlay z-index

--- a/src/scss/_z-index.scss
+++ b/src/scss/_z-index.scss
@@ -1,4 +1,6 @@
-$z-index-header			: 2000;
-$z-index-nav			: 1000;
-$z-index-main			: 500;
-$z-index-nav-overlay	: 750;
+$z-index-header				: 2000;
+$z-index-nav				: 1000;
+$z-index-main				: 500;
+$z-index-nav-overlay		: 750;
+
+$z-index-overlay-container	: 10000;
